fix waves and image position on mobile

--- a/assets/scss/objects/_article.scss
+++ b/assets/scss/objects/_article.scss
@@ -11,7 +11,7 @@
 	word-wrap: break-word;
 }
 
-.post .article__title{ 
+.post .article__title {
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;
 
@@ -24,7 +24,7 @@
 .border-waves-top:after,
 .border-waves-bottom:before {
 	content: "";
-	display: block; 
+	display: block;
 	width: 100%;
 	height: 14px;
 	position: absolute;
@@ -33,13 +33,13 @@
 }
 
 .border-waves-top:after {
-    bottom: -6px;
+    bottom: -7px;
     background-position: top;
     z-index: 20;
 }
 
 .border-waves-bottom:before {
-    top: -6px;
+    top: -7px;
     background-position: bottom;
     z-index: 21;
 }
@@ -49,34 +49,34 @@
     // contain children margins
     padding: 1px 0;
 
-		&.border-waves {
+    &.border-waves {
 
-			&:before, &:after {
-				content: "";
-				display: block; 
-				width: 100%;
-				height: 14px;
-				position: absolute;
-				left: 0;
-				background: url('../images/border-wave.svg') top left repeat-x;
-			}
+     &:before, &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 14px;
+        position: absolute;
+        left: 0;
+        background: url('../images/border-wave.svg') top left repeat-x;
+    }
 
-            &:before {
-                top: -6px;
-                background-position: top;
-                z-index: 20;
-            }
+    &:before {
+        top: -7px;
+        background-position: top;
+        z-index: 20;
+    }
 
-            &:after {
-                bottom: -6px;
-                background-position: bottom;
-                z-index: 21;
-            }
-		}
+    &:after {
+        bottom: -7px;
+        background-position: bottom;
+        z-index: 21;
+    }
+}
 
     &.article--arrow {
 
-        &:before { 
+        &:before {
             display: none;
         }
     }
